# Binspector

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  binspector.sh  install.sh  sdl_banned_funct.list
.github/workflows/: ci.yml
legacy/: README.md  binspector.sh  install.sh  mac_install.sh
rsc/: README.md  banned_functions.list  banner_h.list  references.txt  sdl_banned_funct.list  sql_extended.list
scripts/: README.md  install.ps1  install.sh  normalize_banned_list.py
src/: main.rs
